[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Art/Ui/PopUp Background.png" type="Texture" id=2]
[ext_resource path="res://Art/Ui/Buttons/Info.png" type="Texture" id=3]
[ext_resource path="res://Art/Ui/Buttons/Info-hover.png" type="Texture" id=4]
[ext_resource path="res://Art/Ui/Buttons/Info-pressed.png" type="Texture" id=5]
[ext_resource path="res://Art/Ui/Buttons/Control.png" type="Texture" id=6]
[ext_resource path="res://Art/Ui/Buttons/Control_pressed.png" type="Texture" id=7]
[ext_resource path="res://Art/Ui/Buttons/Control_hover.png" type="Texture" id=8]
[ext_resource path="res://Art/Ui/Buttons/Exit.png" type="Texture" id=9]
[ext_resource path="res://Art/Ui/Buttons/Exit_pressed.png" type="Texture" id=10]
[ext_resource path="res://Art/Ui/Buttons/Exit_hover.png" type="Texture" id=11]
[ext_resource path="res://Art/Ui/Buttons/Right_arrow.png" type="Texture" id=12]
[ext_resource path="res://Art/Ui/Buttons/Right_arrow_pressed.png" type="Texture" id=13]
[ext_resource path="res://Art/Ui/Buttons/Right_arrow-pressed.png" type="Texture" id=14]
[ext_resource path="res://Art/Cup.png" type="Texture" id=15]
[ext_resource path="res://Art/Ui/Buttons/Cross.png" type="Texture" id=16]
[ext_resource path="res://Art/Ui/Buttons/Cross_pressed.png" type="Texture" id=17]
[ext_resource path="res://Art/Ui/Buttons/Cross_hover.png" type="Texture" id=18]
[ext_resource path="res://Art/Ui/Buttons/Cross-hover.png" type="Texture" id=19]
[ext_resource path="res://Art/Ui/Buttons/Level_Select.png" type="Texture" id=20]
[ext_resource path="res://Scripts/Level_Selector.gd" type="Script" id=21]

[node name="Menu" type="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="MainBG" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -206.0
margin_top = -142.0
margin_right = 1308.0
margin_bottom = 758.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 244.0
margin_top = 65.0
margin_right = 356.0
margin_bottom = 79.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "If Memory Serves"
align = 3
valign = 3
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Info" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 464.0
margin_right = 274.0
margin_bottom = 740.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="Controls" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 754.0
margin_top = 474.0
margin_right = 1027.0
margin_bottom = 750.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]

[node name="Quit" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 3.0
margin_right = 275.0
margin_bottom = 279.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
_sections_unfolded = [ "Textures" ]

[node name="Play" type="TextureButton" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 887.0
margin_top = 470.0
margin_right = 1160.0
margin_bottom = 728.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
_sections_unfolded = [ "Textures" ]

[node name="Cup1" type="TextureRect" parent="." index="6"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 509.0
margin_top = 217.0
margin_right = 625.0
margin_bottom = 316.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 15 )
stretch_mode = 0

[node name="Cup3" type="TextureRect" parent="Cup1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -128.0
margin_top = -1.0
margin_right = -12.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 15 )
stretch_mode = 0

[node name="Cup2" type="TextureRect" parent="Cup1" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -65.0
margin_top = 43.0
margin_right = 51.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 15 )
stretch_mode = 0

[node name="InfoBG" type="TextureRect" parent="." index="7"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -190.0
margin_top = -133.0
margin_right = 1295.0
margin_bottom = 747.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Visibility" ]

[node name="ColorFrame" type="ColorRect" parent="InfoBG" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 374.0
margin_top = 219.0
margin_right = 844.0
margin_bottom = 671.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )

[node name="Label1" type="RichTextLabel" parent="InfoBG" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 383.0
margin_top = 231.0
margin_right = 808.0
margin_bottom = 587.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "If Memory Serves was created by Working Group 2 at ITiCSE 2017 in Bologna, Italy, to teach concepts related to pointers. For more information about the game, please visit ifmemoryserves.game.

Original team: James Atlas, Durell Bouchard, Chris Johnson, Monica McGill, Larry Merkle, Chris Messom, Ian Pollock, and Michael Scott. 

Additional Credits

\"Groove Grove\" Kevin MacLeod (incompetech.com)
Licensed under Creative Commons: By Attribution 3.0 License
http://creativecommons.org/licenses/by/3.0/

Brown paper background vector - Freepik
Merienda font (title) - Eduardo Tunni (fontspace.com)


"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "If Memory Serves was created by Working Group 2 at ITiCSE 2017 in Bologna, Italy, to teach concepts related to pointers. For more information about the game, please visit ifmemoryserves.game.

Original team: James Atlas, Durell Bouchard, Chris Johnson, Monica McGill, Larry Merkle, Chris Messom, Ian Pollock, and Michael Scott. 

Additional Credits

\"Groove Grove\" Kevin MacLeod (incompetech.com)
Licensed under Creative Commons: By Attribution 3.0 License
http://creativecommons.org/licenses/by/3.0/

Brown paper background vector - Freepik
Merienda font (title) - Eduardo Tunni (fontspace.com)


"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_colors" ]

[node name="Cross" type="TextureButton" parent="InfoBG" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1058.0
margin_top = 153.0
margin_right = 1328.0
margin_bottom = 426.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 18 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label" type="Label" parent="InfoBG" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 537.0
margin_top = 161.0
margin_right = 575.0
margin_bottom = 175.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "About"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="ControlsBG" type="TextureRect" parent="." index="8"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -190.0
margin_top = -133.0
margin_right = 1295.0
margin_bottom = 747.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Visibility" ]

[node name="ColorFrame" type="ColorRect" parent="ControlsBG" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 374.0
margin_top = 219.0
margin_right = 844.0
margin_bottom = 671.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )

[node name="Label1" type="RichTextLabel" parent="ControlsBG" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 383.0
margin_top = 231.0
margin_right = 808.0
margin_bottom = 587.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "Player 1 (Top Player, Addy)

Up, Down, Left, Right  == Movement
Right Shift == Pick-up Object
Enter/Return == Place Object

Player 2 (Bottom Player, Val)

W, A, S, D == Movement
Q == Pick-up Object

To Place an object as Player 2, the player must move to the desired area just below the counter.

"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Player 1 (Top Player, Addy)

Up, Down, Left, Right  == Movement
Right Shift == Pick-up Object
Enter/Return == Place Object

Player 2 (Bottom Player, Val)

W, A, S, D == Movement
Q == Pick-up Object

To Place an object as Player 2, the player must move to the desired area just below the counter.

"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_colors" ]

[node name="Cross" type="TextureButton" parent="ControlsBG" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1058.0
margin_top = 153.0
margin_right = 1328.0
margin_bottom = 426.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label" type="Label" parent="ControlsBG" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 537.0
margin_top = 161.0
margin_right = 575.0
margin_bottom = 175.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Controls"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="LevelSelectBG" type="TextureRect" parent="." index="9"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -209.0
margin_top = -142.0
margin_right = 1306.0
margin_bottom = 762.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="ScrollContainer" type="ScrollContainer" parent="LevelSelectBG" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 364.0
margin_top = 270.0
margin_right = 984.0
margin_bottom = 602.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0

[node name="Control" type="Control" parent="LevelSelectBG/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LevelSelectBG/ScrollContainer/Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 599.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="0-0" type="Button" parent="LevelSelectBG/ScrollContainer/Control/HBoxContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 112.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 20 )
flat = true
align = 1
script = ExtResource( 21 )

[node name="Label" type="Label" parent="LevelSelectBG/ScrollContainer/Control/HBoxContainer/0-0" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = 30.0
margin_right = 43.0
margin_bottom = 44.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0-0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="0-1" type="Button" parent="LevelSelectBG/ScrollContainer/Control/HBoxContainer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 116.0
margin_right = 228.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 20 )
flat = true
align = 1
script = ExtResource( 21 )

[node name="Label" type="Label" parent="LevelSelectBG/ScrollContainer/Control/HBoxContainer/0-1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = 30.0
margin_right = 43.0
margin_bottom = 44.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0-1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="0-2" type="Button" parent="LevelSelectBG/ScrollContainer/Control/HBoxContainer" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 232.0
margin_right = 344.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 20 )
flat = true
align = 1
script = ExtResource( 21 )

[node name="Label" type="Label" parent="LevelSelectBG/ScrollContainer/Control/HBoxContainer/0-2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = 30.0
margin_right = 43.0
margin_bottom = 44.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0-2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="0-3" type="Button" parent="LevelSelectBG/ScrollContainer/Control/HBoxContainer" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 348.0
margin_right = 460.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 20 )
flat = true
align = 1
script = ExtResource( 21 )

[node name="Label" type="Label" parent="LevelSelectBG/ScrollContainer/Control/HBoxContainer/0-3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = 30.0
margin_right = 43.0
margin_bottom = 44.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0-3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="1-0" type="Button" parent="LevelSelectBG/ScrollContainer/Control/HBoxContainer" index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 464.0
margin_right = 576.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 20 )
flat = true
align = 1
script = ExtResource( 21 )

[node name="Label" type="Label" parent="LevelSelectBG/ScrollContainer/Control/HBoxContainer/1-0" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = 30.0
margin_right = 43.0
margin_bottom = 44.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "1-0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="Cross" type="TextureButton" parent="LevelSelectBG" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1089.0
margin_top = 150.0
margin_right = 1359.0
margin_bottom = 423.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 18 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label" type="Label" parent="LevelSelectBG" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 537.0
margin_top = 188.0
margin_right = 614.0
margin_bottom = 202.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level Select"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]


